kube/countries.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: countries
  namespace: countries-ns
  labels:
    app: countries
spec:
  type: ClusterIP
  ports:
  - port: 8080
  selector:
    app: countries

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: countries
  namespace: countries-ns
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: countries
    spec:
      containers:
      - name: countries
        image: flomsk/countries:v1
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /health/live
            port: 8080
          initialDelaySeconds: 15
          timeoutSeconds: 3
          periodSeconds: 15
        readinessProbe:
          httpGet:
            path: /health/ready
            port: 8080
          initialDelaySeconds: 15
          timeoutSeconds: 3
          periodSeconds: 15
