kube/ing-airports.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-airports
  namespace: airports-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: airports.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: airports
          servicePort: 8080
